After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708465 - cursor: Bug fixes
cursor: Bug fixes
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: power
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2013-09-20 14:51 UTC by Bastien Nocera
Modified: 2013-09-24 10:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
cursor: Fix incorrect comment (1.06 KB, patch)
2013-09-20 14:51 UTC, Bastien Nocera
committed Details | Review
cursor: Fix cursor state when plugin is disabled (1.06 KB, patch)
2013-09-20 14:51 UTC, Bastien Nocera
none Details | Review

Description Bastien Nocera 2013-09-20 14:51:10 UTC
Since this code was written, mutter is now again responsible for
setting up the default root cursor.
Comment 1 Bastien Nocera 2013-09-20 14:51:12 UTC
Created attachment 255407 [details] [review]
cursor: Fix incorrect comment
Comment 2 Bastien Nocera 2013-09-20 14:51:55 UTC
Created attachment 255408 [details] [review]
cursor: Fix cursor state when plugin is disabled

If the plugin is just disabled, it's still an X client
and a hidden cursor will still be hidden.
Comment 3 Giovanni Campagna 2013-09-20 15:11:03 UTC
Review of attachment 255407 [details] [review]:

Yes.

(Did gnome-settings-daemon ever do that? I'm quite sure mutter has had code to set the root cursor for a long time)
Comment 4 Giovanni Campagna 2013-09-20 15:13:37 UTC
Review of attachment 255408 [details] [review]:

::: plugins/cursor/gsd-cursor-manager.c
@@ +463,3 @@
+        /* If the plugin is just disabled, it's still an X client
+         * and a hidden cursor will still be hidden */
+        set_cursor_visibility (manager, TRUE);

Isn't this is handled a few lines later?
Comment 5 Bastien Nocera 2013-09-20 15:32:37 UTC
Comment on attachment 255408 [details] [review]
cursor: Fix cursor state when plugin is disabled

Yep, already there...
Comment 6 Bastien Nocera 2013-09-23 16:18:04 UTC
(In reply to comment #3)
> Review of attachment 255407 [details] [review]:
> 
> Yes.
> 
> (Did gnome-settings-daemon ever do that? I'm quite sure mutter has had code to
> set the root cursor for a long time)

It did when I was writing the cursor plugin...
Comment 7 Bastien Nocera 2013-09-24 10:52:37 UTC
Attachment 255407 [details] pushed as b85a011 - cursor: Fix incorrect comment