cursor: Fix incorrect comment

Since this code was written, mutter is now again responsible for
setting up the default root cursor.

https://bugzilla.gnome.org/show_bug.cgi?id=708465